# Marker-Coverage--computer-vision

./: .gitignore  ALGORITHM.md  CMakeLists.txt  README.md  Sodyo assigment.cpp  Sodyo assigment.vcxproj  Sodyo assigment.vcxproj.filters
include/: color_segmentation.hpp  coverage.hpp  grid_detector.hpp  types.hpp
src/: color_segmentation.cpp  coverage.cpp  grid_detector.cpp  main.cpp
x64/Debug/: Sodyo assigment.exe.recipe  Sodyo assigment.ilk  Sodyo assigment.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Sodyo assigment.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sodyo assigment.lastbuildstate  Sodyo assigment.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/: Sodyo assigment.exe.recipe  Sodyo assigment.iobj  Sodyo assigment.ipdb  Sodyo assigment.vcxproj.FileListAbsolute.txt
x64/Release/Sodyo assigment.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sodyo assigment.lastbuildstate  Sodyo assigment.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
